--- a/README.org
+++ b/README.org
@@ -12,6 +12,7 @@
 Personal collection of configurations for a system. Objective is to set up environment as easily as possible, especially on a new machine. Current supported platforms:
   - [[https://www.apple.com/macos/][macOS]] (10.13+)
   - [[https://www.kernel.org/linux.html][Linux]]
+    - [[https://alpinelinux.org/][Alpine]] (3.7.0+)
     - [[https://www.debian.org/][Debian]] (9.4+, [[https://github.com/jupl/.dotfiles/issues?q=is%3Aissue+is%3Aopen+label%3Adebian][WIP]])
     - [[https://www.ubuntu.com/][Ubuntu]] (18.04+)
 
@@ -23,6 +24,8 @@ Personal collection of configurations for a system. Objective is to set up envir
 - Linux
   - [[https://www.gnu.org/software/make/manual/make.html][Make]]
   - [[https://git-scm.com/][Git]]
+- Alpine
+  - [[https://linode.com/docs/tools-reference/custom-kernels-distros/install-alpine-linux-on-your-linode/#configuration][sudo]]
 - Debian
   - [[http://milq.github.io/enable-sudo-user-account-debian/][sudo]]
 
